
- improve quality and performance of internal DMD shader (especially visible on FSS tables)

- support to add custom notes to a table. To open a dockable notes dialog use the menu View -> Notes. Any text that was entered there is saved with the current active table.

- add ElasticityFalloff to the wall physics properties

FIXES:

- fix problem with gate animations introduced in 10.1 when the open/close script functions were used before

- fix issue where saving a table can cost up to 4x (8x on 64bit) the temporary memory

- fix issues when fallback search of core.vbs is triggered

- properly save recently opened directory for all kinds of dialogs

- fix crashes and not being able to select files with very long file names (e.g. images)

- fix hang on player exit on some setups

- do not mark table as dirty if just starting to play it (i.e. due to backup phase)

- replace dithering code with blue noise, fixes flickering patterns (especially in darker table areas)
- tweak AO (Ambient Occlusion) and SSR (Screen Space Reflections) to be a bit less noisy

- tweak minimum physics cycle time, which mainly influences kickers
  also update default kicker physics (Hit height 0.35 and Hit accuracy 0.5)

- fix slightly wrong flipper mesh (visible for very short flippers)

- fix some broken insert lights if playfield reflections are disabled

- fix OBJ-exported names for all ramp types
- fix missing wire thickness for triggers on OBJ export

- fix crash on (at least) one pre-forsyth-mesh-reorder table

- fix crash on loading older tables with too long collection names

- fix hangs on loading/playing older tables due to invalid shapes

- add many more different windowed mode resolutions

- also search for table-script replacements (i.e. external .vbs with the same/table name) in the "Scripts" folder to match the core script behavior