@@ -100,6 +100,18 @@ static void AddToolTip(char *text, HWND parentHwnd, HWND toolTipHwnd, HWND contr
 ///</summary>
 VPinball::VPinball()
 {
+   if ((fopen_s(&m_profile_file, "Profile.txt", "r") == 0) && m_profile_file)
+   {
+      fclose(m_profile_file);
+      if ((fopen_s(&m_profile_file, "Profile.txt", "a") == 0) && m_profile_file)
+      {
+         const time_t curr = time(0);
+         char buf[26];
+         ctime_s(buf,sizeof(buf),&curr);
+         fprintf(m_profile_file, "\nTrace from %s\n", buf);
+      }
+   }
+
    // DLL_API void DLL_CALLCONV FreeImage_Initialise(BOOL load_local_plugins_only FI_DEFAULT(FALSE)); //add FreeImage support BDS
    m_closing = false;
    m_unloadingTable = false;
@@ -153,6 +165,9 @@ VPinball::~VPinball()
    // DLL_API void DLL_CALLCONV FreeImage_DeInitialise(); //remove FreeImage support BDS
    SetClipboard(nullptr);
    FreeLibrary(m_scintillaDll);
+
+   if (m_profile_file)
+       fclose(m_profile_file);
 }
 
 ///<summary>
@@ -897,6 +912,8 @@ void VPinball::ToggleToolbar()
 
 void VPinball::DoPlay(const bool _cameraMode)
 {
+   ProfileLog("DoPlay");
+
    NumVideoBytes = 0;
    CComObject<PinTable> * const ptCur = GetActiveTable();
    if (ptCur)
@@ -959,7 +976,7 @@ void VPinball::LoadFileName(const string& szFileName, const bool updateEditor)
    else
    {
       TitleFromFilename(szFileName, ppt->m_szTitle);
-      ppt->InitPostLoad(this);
+      ppt->InitTablePostLoad();
 
       AddMDITable(mdiTable);
 
@@ -1002,6 +1019,9 @@ void VPinball::LoadFileName(const string& szFileName, const bool updateEditor)
       // make sure the load directory is the active directory
       SetCurrentDirectory(m_currentTablePath.c_str());
       UpdateRecentFileList(szFileName);
+
+      ProfileLog("UI Post Load Start");
+
       ppt->AddMultiSel(ppt, false, true, false);
       ppt->SetDirty(eSaveClean);
       if(updateEditor)
@@ -1014,6 +1034,8 @@ void VPinball::LoadFileName(const string& szFileName, const bool updateEditor)
 
           SetFocus();
       }
+
+      ProfileLog("UI Post Load End");
    }
 }
 
@@ -1490,6 +1512,8 @@ void VPinball::OnInitialUpdate()
         return;
 
     wintimer_init();                    // calibrate the timer routines
+
+    ProfileLog("OnInitialUpdate");
 
     const int foo[6] = {120, 240, 400, 600, 800, 1400};
 
@@ -2271,9 +2295,10 @@ void VPinball::OpenNewTable(size_t tableId)
     }
 
     PinTableMDI *mdiTable = new PinTableMDI(this);
-
-    mdiTable->GetTable()->InitBuiltinTable(this, tableId != ID_NEW_EXAMPLETABLE);
-    m_vtable.push_back(mdiTable->GetTable());
+    CComObject<PinTable>* ppt = mdiTable->GetTable();
+    m_vtable.push_back(ppt);
+    ppt->InitBuiltinTable(tableId != ID_NEW_EXAMPLETABLE);
+    ppt->InitTablePostLoad();
 
     AddMDITable(mdiTable);
     mdiTable->GetTable()->AddMultiSel(mdiTable->GetTable(), false, true, false);
@@ -2327,5 +2352,14 @@ void VPinball::CopyPasteElement(const CopyPasteModes mode)
             default:
                 break;
         }
+    }
+}
+
+void VPinball::ProfileLog(const string& msg)
+{
+    if(m_profile_file)
+    {
+        const double sec = msec() * (1.0/1000.0);
+        fprintf(m_profile_file, "%.3f : %s\n", sec, msg.c_str());
     }
 }
