@@ -49,6 +49,9 @@ FEATURES:
 
 - add ElasticityFalloff to the wall physics properties
 
+- ability to do a rough profiling of the table loading
+  if a file 'Profile.txt' exists in the same directory as VPX, then statistics for the loaded tables will be appended
+
 FIXES:
 
 - fix problem with gate animations introduced in 10.1 when the open/close script functions were used before
